@@ -22,16 +22,30 @@ sourceSets.main.resources.srcDirs = ["res"]
 nmp.genericInit(mindustryVersion)
 
 dependencies {
-    annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.4.2'
-    compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:0.4.2'
-
     annotationProcessor "com.github.bsideup.jabel:jabel-javac-plugin:0.4.2"
+    compileOnly "com.github.bsideup.jabel:jabel-javac-plugin:0.4.2"
+
     antlr "org.antlr:antlr4:4.13.2"
+
+    implementation "com.squareup:javapoet:1.13.0"
 }
 
 configure([tasks.compileJava]) {
     sourceCompatibility = 16
-    options.release = 8
+
+    options.fork = false
+    options.compilerArgs.addAll([
+            "--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED",
+            "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+            "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang=ALL-UNNAMED",
+            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+            "--add-opens=java.base/java.io=ALL-UNNAMED",
+            "--add-opens=java.base/java.util=ALL-UNNAMED"
+    ])
 
     javaCompiler = javaToolchains.compilerFor {
         languageVersion = JavaLanguageVersion.of(16)
@@ -46,8 +60,6 @@ tasks.generateGrammarSource {
     arguments += [ "-visitor",
                    "-long-messages",
                    "-package", packagee.replaceAll("[/\\\\]", ".")]
-
-    //outputDirectory = new File(outputDirectory, packagee)
 
     doFirst {
         delete mainDir.listFiles()
